--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
           node-version: 18
           cache: 'yarn'
       - name: Install dependencies
-        run: npm install
+        run: yarn
       - name: Build
         run: yarn build
       - name: Setup Pages
